# ndarrays

./: .gitignore  CMakeLists.txt  main.cpp  ndarray.h
cmake/: EnableGTest.cmake
ndarray/: CMakeLists.txt  ndarray.h  ndarray_math.h  string_utils.h
src/: CMakeLists.txt  index_sequence.h  ndarray.h  ndarray_math.h  ndarray_t.h  tensor.h
test/: CMakeLists.txt  common.h  ndarray_math_test.cpp  ndarray_test.cpp  test_init.cpp  tests_main.cpp
